--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DB_PASSWORD=secret
 DB_PORT=5432
 DB_DRIVER=postgres  #mysql
 
+AMQP_DEFAULT_QUEUE=amir_chan
 AMQP_USER=guest
 AMQP_PASSWORD=guest
 AMQP_PORT=5672
